cabal-version:       >=1.10

name:                subtitles
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz.carrete@facebook.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable subtitles
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       
    base >=4.14 && <4.15,
    megaparsec,
    text,
    containers,
    bytestring,
    parser-combinators
    
  -- hs-source-dirs:
  default-language:    Haskell2010
